Visual cue selection backup

--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
@@ -95,6 +95,14 @@ devMode=Dev mode
 startGame=Start Game
 resumeLastGame=Resume Saved Game
 
+# Cue selection
+select=Select
+owned=Owned
+cueRingDiameter=直径
+cuePower=力度
+cueAiming=准确度
+cueSpin=旋转效果
+
 # Game UI
 cueText=Cue
 isCuing=Cuing
