--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -95,6 +95,14 @@ devMode=开发者模式
 startGame=开始游戏
 resumeLastGame=恢复上次游戏
 
+# Cue selection
+select=选择
+owned=已拥有
+cueRingDiameter=直径
+cuePower=力度
+cueAiming=准确度
+cueSpin=旋转效果
+
 # Game UI
 cueText=击球
 isCuing=正在击球
