Cue diy preview

--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -261,6 +261,8 @@ registryFee=报名费
 flightFee=交通费
 hotelFee=住宿费
 travelFee=参赛支出
+otherFee=其他支出
+oweInterest=欠款利息
 totalFee=合计
 achievementsOf=%s成绩
 bestAnyScore=最佳成绩：
@@ -298,6 +300,11 @@ historyDateTime=时间
 historyScore=分数/球数
 historySuccess=完成
 bestScore=最高
+inventory=仓库
+store=商城
+inventoryCues=球杆
+buy=购买
+
 levelUp=升级
 levelUped=升级
 clickToRandomPerk=点击抽取奖励
@@ -441,6 +448,17 @@ displayWindowed=窗口化
 displayFullScreen=全屏
 confirmSaveChanges=
 confirmDiscardChanges=确认要舍弃更改吗？
+
+# Cue previewer UI
+cuePreviewer=diy球杆
+bigHeadCue=大头杆
+smallHeadCue=小头杆
+resetViewport=重置视角
+frontColor=前段颜色
+frontTexture=前段贴图
+backColor=后段颜色
+backTexture=后段贴图
+apply=应用
 
 # Enum names
 snooker=斯诺克
