--- a/src/main/resources/trashsoftware/trashSnooker/doc/changelog.txt
+++ b/src/main/resources/trashsoftware/trashSnooker/doc/changelog.txt
@@ -1,4 +1,13 @@
 
+* 货币系统实装：
+    * 升级技能需要花费
+    * 参赛费用
+    * 球杆商城
+* 球杆系统更新：
+    * 可在比赛中随时更换球杆
+    * 球杆贴图
+    * 球杆DIY预览器
+
 * Bug修复：
     * 可能修复了在袋里的球还会参与碰撞运算的问题
 
