--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -261,7 +261,8 @@ registryFee=报名费
 flightFee=交通费
 hotelFee=住宿费
 travelFee=参赛支出
-otherFee=其他支出
+otherFee=固定支出
+lifeFee=基础生活费
 oweInterest=欠款利息
 totalFee=合计
 achievementsOf=%s成绩
