--- a/src/main/resources/trashsoftware/trashSnooker/doc/changelog.txt
+++ b/src/main/resources/trashsoftware/trashSnooker/doc/changelog.txt
@@ -1,8 +1,10 @@
+===== 0.6 Preview =====
 
 * 货币系统实装：
     * 升级技能需要花费
     * 参赛费用
     * 球杆商城
+    * 从career中分离invoice并记录每一笔变化
 * 球杆系统更新：
     * 可在比赛中随时更换球杆
     * 球杆贴图
@@ -12,6 +14,7 @@
 * 完善了生涯模式的历史消费记录
 * Bug修复：
     * 可能修复了在袋里的球还会参与碰撞运算的问题
+    * 修复了一局结束之后开始下一局时，若是AI对手开球，玩家可以替对手投降的bug
 
 ===== 0.5.1 =====
 20230921
