--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -69,6 +69,7 @@ catAll=全部
 aiming=瞄准
 cuePrecision=出杆准确度
 cuePrecisionTooltip=出杆准确度较低的选手可能无法打中瞄准的方向
+power=力量
 powerAndMaxPower=力量/最大力量
 powerTooltip=使用过大的力量可能导致准确度大幅下降，甚至呲杆
 powerControl=力量控制
@@ -79,6 +80,8 @@ offHand=非惯用手
 restHand=架杆
 leftHand=左手
 rightHand=右手
+radarChart=雷达图
+barChart=正常
 
 # Fast Game UI
 fastGameGame=比赛
