--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
@@ -70,6 +70,7 @@ aiming=Aiming
 cuePrecision=Cue precision
 cuePrecisionTooltip=Players with low cue precision might not be able to cue at designated direction.
 powerAndMaxPower=Power/Max power
+power=Power
 powerTooltip=Playing beyond 'Power' may result in significantly lower cue precision, or even miscued.
 powerControl=Power control
 powerControlTooltip=Ability of playing at the designated power accurately.
