Chinese eight rank and radar comparison

--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -82,6 +82,8 @@ leftHand=左手
 rightHand=右手
 radarChart=雷达图
 barChart=正常
+showComparison=显示对手
+hideComparison=隐藏对手
 
 # Fast Game UI
 fastGameGame=比赛
@@ -251,6 +253,10 @@ rankRank=排名
 rankName=球员
 rankAwards=奖金
 rankTotalAwards=生涯总奖金
+rankTier=段位
+rankTotalWins=胜场
+rankWinRate=胜率
+
 rankNBigChamps=赛季重要冠军数
 rankNChamps=赛季冠军数
 continueTour=继续
