--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -381,6 +381,7 @@ showAllMatches=显示完整赛程
 treeShowingFull=完整赛程
 treeShowingAlive=未淘汰的球员
 treeShowingRemaining=未进行的比赛
+awardGained=获得奖励
 
 # Stats UI
 statsMatches=比赛
@@ -473,9 +474,17 @@ apply=应用
 cannotPurchase=无法购买
 noMoney=没钱
 confirmPurchase=确认购买？
-balanceAfterPurchase=购买后余额: %d (-%d) = %d
+balanceAfterPurchase=购买后余额: %s (-%s) = %s
 purchaseComplete=购买成功！
 purchaseCompleteDes=已加入您的仓库
+tipHp=皮头耐久度
+tipHpFmt=皮头耐久度: %s
+changeTip=更换皮头
+changeTipMoney=更换皮头 -%s
+changeTipConfirm=是否花费 $%s 更换皮头？
+changeTipPrice=购买后余额: %s
+tipBroken=皮头损坏！
+tipBrokenTip=打开【更换球杆】界面以更换皮头
 
 # Enum names
 snooker=斯诺克
