--- a/src/main/resources/trashsoftware/trashSnooker/doc/changelog.txt
+++ b/src/main/resources/trashsoftware/trashSnooker/doc/changelog.txt
@@ -7,7 +7,10 @@
 * 球杆系统更新：
     * 可在比赛中随时更换球杆
     * 球杆贴图
+    * 新增了很多球杆
     * 球杆DIY预览器
+* 皮头系统：
+    * 皮头作为消耗品
 * 球杆相关更新：
     * 打点精度取决于球的大小与球杆粗细
 * 完善了生涯模式的历史消费记录:
