--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -477,8 +477,15 @@ confirmPurchase=确认购买？
 balanceAfterPurchase=购买后余额: %s (-%s) = %s
 purchaseComplete=购买成功！
 purchaseCompleteDes=已加入您的仓库
-tipHp=皮头耐久度
-tipHpFmt=皮头耐久度: %s
+tipNameFmt=皮头: %s
+tipHp=耐久度
+tipHpFmt=耐久度: %s
+tipGrip=摩擦力
+tipGripFmt=摩擦力: %.2f
+tipPower=力度
+tipPowerFmt=力度: %.2f
+tipAbout=关于皮头
+tipHpDesFmt=皮头耐久度低于%d%%时会影响性能，完全损坏后会无法施加杆法
 changeTip=更换皮头
 changeTipMoney=更换皮头 -%s
 changeTipConfirm=是否花费 $%s 更换皮头？
