--- a/src/main/resources/trashsoftware/trashSnooker/doc/changelog.txt
+++ b/src/main/resources/trashsoftware/trashSnooker/doc/changelog.txt
@@ -6,6 +6,7 @@
     * 球杆商城
 * 球杆系统更新：
     * 可在比赛中随时更换球杆
+    * 快速游戏将可使用所有非私人订制球杆
     * 球杆贴图
     * 新增了很多球杆
     * 球杆DIY预览器
@@ -19,6 +20,8 @@
 * Bug修复：
     * 可能修复了在袋里的球还会参与碰撞运算的问题
     * 修复了一局结束之后开始下一局时，若是AI对手开球，玩家可以替对手投降的bug
+* 图形优化：
+    * 采用了新的球体模型，基本解决球体两极贴图模糊的问题
 
 ===== 0.5.1 =====
 20230921
