--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -477,6 +477,7 @@ confirmPurchase=确认购买？
 balanceAfterPurchase=购买后余额: %s (-%s) = %s
 purchaseComplete=购买成功！
 purchaseCompleteDes=已加入您的仓库
+purchaseCueDes=*注: 新杆将会在下一场比赛开始时加入您的球杆列表
 tipNameFmt=皮头: %s
 tipHp=耐久度
 tipHpFmt=耐久度: %s
