--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -313,6 +313,7 @@ bestScore=最高
 inventory=仓库
 store=商城
 inventoryCues=球杆
+inventoryTips=皮头
 buy=购买
 
 levelUp=升级
@@ -493,6 +494,23 @@ changeTipConfirm=是否花费 $%s 更换皮头？
 changeTipPrice=购买后余额: %s
 tipBroken=皮头损坏！
 tipBrokenTip=打开【更换球杆】界面以更换皮头
+
+# Cash Flow View and enums
+subtotal=合计
+balanceAfter=余额
+taxes=税
+
+invoiceParticipation=参赛
+invoiceChampionshipEarn=赛事奖金
+invoiceChallengeEarn=挑战奖励
+invoicePurchase=购物
+invoiceUpgrade=技能训练
+invoiceFees=费用
+subInvoiceRegistry=报名费
+subInvoiceTravel=机票
+subInvoiceHotel=住宿
+subInvoiceOweInterest=欠款利息
+subInvoiceLifeFee=生活费
 
 # Enum names
 snooker=斯诺克
