--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -499,6 +499,8 @@ tipBrokenTip=打开【更换球杆】界面以更换皮头
 subtotal=合计
 balanceAfter=余额
 taxes=税
+cumIncome=累计收入
+cumExpenditure=累计支出
 
 invoiceParticipation=参赛
 invoiceChampionshipEarn=赛事奖金
