--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -499,8 +499,11 @@ tipBrokenTip=打开【更换球杆】界面以更换皮头
 subtotal=合计
 balanceAfter=余额
 taxes=税
+income=收入
+expenditure=支出
 cumIncome=累计收入
 cumExpenditure=累计支出
+fixedExpenditure=固定支出
 
 invoiceParticipation=参赛
 invoiceChampionshipEarn=赛事奖金
@@ -508,11 +511,13 @@ invoiceChallengeEarn=挑战奖励
 invoicePurchase=购物
 invoiceUpgrade=技能训练
 invoiceFees=费用
+invoiceInvitation=出场费
 subInvoiceRegistry=报名费
 subInvoiceTravel=机票
 subInvoiceHotel=住宿
 subInvoiceOweInterest=欠款利息
 subInvoiceLifeFee=生活费
+subInvoiceInitMoney=初始资金
 
 # Enum names
 snooker=斯诺克
