--- a/src/main/resources/trashsoftware/trashSnooker/doc/changelog.txt
+++ b/src/main/resources/trashsoftware/trashSnooker/doc/changelog.txt
@@ -1,4 +1,4 @@
-===== 0.6 Preview =====
+===== 0.6 Beta =====
 
 * 货币系统实装：
     * 升级技能需要花费
@@ -15,6 +15,9 @@
     * 皮头作为消耗品
 * 球杆相关更新：
     * 打点精度取决于球的大小与球杆粗细
+* 打点系统更新：
+    * 允许的打点范围取决于皮头大小和摩擦力
+    * 球杆的材质弹性
 * 完善了生涯模式的历史消费记录:
     * 从career中分离invoice并记录每一笔变化
 * 球员能力雷达图
