--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -512,6 +512,7 @@ invoicePurchase=购物
 invoiceUpgrade=技能训练
 invoiceFees=费用
 invoiceInvitation=出场费
+invoiceAchievementAward=成就奖励
 subInvoiceRegistry=报名费
 subInvoiceTravel=机票
 subInvoiceHotel=住宿
