--- a/src/main/resources/trashsoftware/trashSnooker/doc/changelog.txt
+++ b/src/main/resources/trashsoftware/trashSnooker/doc/changelog.txt
@@ -18,8 +18,15 @@
 * 打点系统更新：
     * 允许的打点范围取决于皮头大小和摩擦力
     * 球杆的材质弹性
+* 物理效果更新：
+    * 优化了扎杆的效果
+    * 立杆尾时加入身高因素
+    * 立杆尾时架杆不再跟着一起立
 * 完善了生涯模式的历史消费记录:
     * 从career中分离invoice并记录每一笔变化
+* 成就系统更新：
+    * 有钱拿了
+    * 修复了一些小bug
 * 球员能力雷达图
 * Bug修复：
     * 可能修复了在袋里的球还会参与碰撞运算的问题
