--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -15,6 +15,8 @@ backIcon=←
 finishAndClose=是否退出？
 finishAndCloseHint=您也可以稍后手动关闭窗口
 randomPlayerName=台球运动爱好者-%d
+all=全部
+multipleSelection=多选
 
 # Entry UI
 career=玩家
@@ -261,6 +263,7 @@ rankNBigChamps=赛季重要冠军数
 rankNChamps=赛季冠军数
 continueTour=继续
 tourInProgress=正在进行的比赛
+currentDateFmt=当前日期: %s
 nextTour=下项赛事
 enrol=报名
 start=开始
