--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -249,6 +249,7 @@ deletePlayerWithCareer=同时删除此球员
 # Career UI
 restorePerks=重置
 applyPerks=确定分配
+availPerksFmt=可用技能点: %d
 worldRanking=世界排名
 rankingType=排名方式
 rankRank=排名
@@ -588,3 +589,19 @@ typeComputer=电脑
 
 exportAreaFull=完整
 exportAreaGamePane=仅球桌
+
+letBallFrontFmt=前%s
+letBallMidFmt=中%s
+letBallBackFmt=后%s
+
+num0=零
+num1=一
+num2=二
+num3=三
+num4=四
+num5=五
+num6=六
+num7=七
+num8=八
+num9=九
+num10=十
