--- a/src/main/resources/trashsoftware/trashSnooker/doc/changelog.txt
+++ b/src/main/resources/trashsoftware/trashSnooker/doc/changelog.txt
@@ -31,8 +31,14 @@
 * Bug修复：
     * 可能修复了在袋里的球还会参与碰撞运算的问题
     * 修复了一局结束之后开始下一局时，若是AI对手开球，玩家可以替对手投降的bug
+    * 修复了斯诺克打彩球时彩球没进但误进其他球，判定为无意识救球的bug
 * 图形优化：
     * 采用了新的球体模型，基本解决球体两极贴图模糊的问题
+* 界面优化：
+    * 生涯模式UI布局优化
+    * 中八显示让球及单杆进球数
+    * 生涯模式的赛事，玩家若不在最初轮参赛，则AI赛事将会一场场进行，确保玩家在正式开赛之前能知道对手是谁
+    * 优化了部分界面在窗口最大化时的布局
 
 ===== 0.5.1 =====
 20230921
