--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Achievements_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Achievements_zh.properties
@@ -12,6 +12,7 @@ achCatTour=巡回赛
 achCatSnookerTour=斯诺克巡回赛
 achCatChineseEightTour=中式台球巡回赛
 achCatAmericanNineTour=美式九球巡回赛
+achCatFinancial=大富翁
 
 # Achievements
 # General
@@ -152,6 +153,14 @@ achComeBackBehind65=单局逆转
 achDesComeBackBehind65=落后65分以上翻盘
 achComeBackBehindOverScore=大逆转
 achDesComeBackBehindOverScore=被超分之后翻盘
+achBlackBattle=抢黑大战
+achDesBlackBattle=平分进入抢黑阶段
+achLastGaspWin=绝杀
+achDesLastGaspWin=以一球优势绝杀对手
+achLastGaspLost=被绝杀
+achDesLastGaspLost=以一球劣势被对手绝杀
+achNotConcede=以赛代练？
+achDesNotConcede=被超分20之后仍不认输
 achSumBelow=菜鸡互啄
 achDesSumBelow=双方总得分加上台面剩余分数低于75分
 achSumBelow2=卧龙凤雏
@@ -202,10 +211,6 @@ achAmericanNineNoPot=这么大的洞都打不进？
 achDesAmericanNineNoPot=一局美式九球比赛中击球4次以上，但最终一球未进
 
 # Tournaments
-achEarnedMoney=赚钱了！
-achDesEarnedMoney=获得比赛奖金
-achEarnMoneyCumulative=发家致富
-achDesEarnMoneyCumulative=累计获得比赛奖金%d
 achChampion=生涯首冠
 achDesChampion=第一次夺得冠军
 achSecondPlace=痛失冠军
@@ -213,6 +218,14 @@ achDesSecondPlace=获得亚军
 achBestFour=差一点点就进决赛了
 achDesBestFour=获得四强
 achDefeatByChampion=输给冠军，我就是亚军
+achFirstMainOfTournament=登上舞台
+achDesFirstMainOfTournament=第一次打进正赛
+achParticipateTournaments=东征西讨
+achDesParticipateTournaments=累计参加%d次赛事
+achMainOfTournaments=南征北战
+achDesMainOfTournaments=累计%d次进入赛事正赛阶段
+achGetInvited=求我去打比赛啊
+achDesGetInvited=第一次作为种子选手收到赛事邀请
 achDesDefeatByChampion=在决赛之前被当届冠军击败
 achPlayOneYear=一年级毕业
 achDesPlayOneYear=参加完第一年的比赛
@@ -270,6 +283,20 @@ achDefeatSameOpponentMultiAmerican1=克星
 achDesDefeatSameOpponentMultiAmerican1=在美式九球巡回赛中，面对一个对手取得三胜零负的战绩
 achDefeatSameOpponentMultiAmerican2=终极克星
 achDesDefeatSameOpponentMultiAmerican2=在美式九球巡回赛中，面对一个交手至少10次的对手取得90%以上的胜率
+
+# Financial
+achEarnedMoney=赚钱了！
+achDesEarnedMoney=获得比赛奖金
+achChampEarnCumulative=发家致富
+achDesChampEarnCumulative=累计获得比赛奖金%d（税前）
+achSaveMoney=富一代
+achDesSaveMoney=积蓄达到%d
+achOweMoney=负债累累
+achDesOweMoney=欠债
+achExpenditure=柴米油盐贵...
+achDesExpenditure=累计开支%d
+achBuyItems=买买买！
+achDesBuyItems=购买%d次商品
 
 # Unique defeats
 achUniqueDefeat=击败过%s
