--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Achievements_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Achievements_zh.properties
@@ -145,6 +145,12 @@ achSnookerBreak100Big=大号破百
 achDesSnookerBreak100Big=单杆得分超过135分
 achSnookerBreak147=最高荣耀！
 achDesSnookerBreak147=满分杆
+achSnookerBreak167=最高荣耀-土豪版！
+achDesSnookerBreak167=金球满分杆
+achSnookerTenBreak107=青春版满分杆！
+achDesSnookerTenBreak107=十红球满分杆
+achMiniSnookerBreak75=阉割版满分杆！
+achDesMiniSnookerBreak75=六红球满分杆
 achSnookerCumulateScore=进攻大师
 achDesSnookerCumulateScore=累计得分%d
 achSnookerCumulateFoulGain=防守大师
