--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
@@ -206,6 +206,7 @@ wrongFreeBall=Wrong free ball hit
 targetRedColorPots=Colored ball pots while target is red
 targetRedHitX=Target is red, %s hit
 targetColorRedHit=Target is colored ball, red hit
+targetColorXHit=Target is colored ball, %s hit
 targetXRedHit=Target is %s, red hit
 targetXOtherHit=Target is %s, other ball hit
 targetXHitY=Target is %s, %s hit
