--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -201,6 +201,7 @@ brownBall=咖啡球
 blueBall=蓝球
 pinkBall=粉球
 blackBall=黑球
+goldBall=金球
 coloredBall=彩球
 
 # Foul reasons
@@ -210,6 +211,7 @@ wrongFreeBall=击打了错误的自由球
 targetRedColorPots=目标球为红球，但有彩球落袋
 targetRedHitX=目标球为红球，但击打了%s
 targetColorRedHit=目标球为彩球，但击打了红球
+targetColorXHit=目标球为彩球，但击打了%s
 targetXRedHit=目标球为%s，但击打了红球
 targetXOtherHit=目标球为%s，但击打了其他球
 targetXHitY=目标球为%s，但击打了%s
