--- a/src/main/resources/trashsoftware/trashSnooker/doc/changelog.txt
+++ b/src/main/resources/trashsoftware/trashSnooker/doc/changelog.txt
@@ -20,6 +20,8 @@
     * 球杆的材质弹性
 * 物理效果更新：
     * 优化了扎杆的效果
+    * 大幅调整了球的自身滚动对旋转的影响
+    * 优化了逆毛效应
     * 立杆尾时加入身高因素
     * 立杆尾时架杆不再跟着一起立
     * 重新引入了球的碰撞能量损耗
@@ -32,10 +34,12 @@
 * 排名历史/成绩历史
 * 游戏规则优化：
     * 中式台球与乔氏中式八球的开球规则
+    * 斯诺克金球规则
 * Bug修复：
     * 可能修复了在袋里的球还会参与碰撞运算的问题
     * 修复了一局结束之后开始下一局时，若是AI对手开球，玩家可以替对手投降的bug
     * 修复了斯诺克打彩球时彩球没进但误进其他球，判定为无意识救球的bug
+    * 修复了九球提前进9号直接输的问题
 * 图形优化：
     * 采用了新的球体模型，基本解决球体两极贴图模糊的问题
 * 界面优化：
