--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
@@ -36,6 +36,7 @@ changelogMenu=Changelog
 # New Career UI
 difficulty=Difficulty
 aiGoodness=Ai Strength
+includeCustomPlayer=Players from other career as opponents
 createPlayerPerson=New Player
 careerName=Player Name
 sexWithHelp=Sex(?)
@@ -44,11 +45,14 @@ heightWithHelp=Height(?)
 heightTooltip=Higher players have worse initial rest cue technique.
 primaryHand=Dominant Hand
 createPlayer=Create
+createCareerPlayer=Create
 existingPlayerPerson=Existing Player
 existingPlayerTooltip=Perking system will be disabled
 usePlayerPerson=Use player
 initializingCareer=Initializing data...
 playerPersonAlreadyExists=Player already exists
+pleaseSelectAPlayer=Please select a person
+pleaseInputName=Please type your name
 
 difEasiest=Easiest
 difEasy=Easy
