--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -36,6 +36,7 @@ changelogMenu=更新日志
 # New Career UI
 difficulty=难度
 aiGoodness=AI强度
+includeCustomPlayer=将其他生涯的球员作为对手
 createPlayerPerson=新建球员
 careerName=玩家名
 sexWithHelp=性别(?)
@@ -44,11 +45,14 @@ heightWithHelp=身高(?)
 heightTooltip=身高越高，架杆能力初始值越低
 primaryHand=惯用手
 createPlayer=创建玩家
+createCareerPlayer=创建
 existingPlayerPerson=已有球员
 existingPlayerTooltip=使用已有球员将禁用加点系统
 usePlayerPerson=使用球员
 initializingCareer=正在初始化存档...
 playerPersonAlreadyExists=已存在该球员
+pleaseSelectAPlayer=请选择一名球员
+pleaseInputName=请输入玩家名
 
 difEasiest=最易
 difEasy=简单
