--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Achievements_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Achievements_zh.properties
@@ -187,8 +187,8 @@ achPoolBreakPot=成功的开球
 achDesPoolBreakPot=开球进球
 achPoolBreakMaster=开球专家
 achDesPoolBreakMaster=开球进球两颗以上
-achDoublePotWin=翻袋致胜
-achDesDoublePotWin=翻袋打进致胜球
+achDoublePotWin=翻袋制胜
+achDesDoublePotWin=翻袋打进制胜球
 achPoolClear=一杆清台
 achDesPoolClear=一杆清台
 achPoolBreakClear=炸清
@@ -202,7 +202,7 @@ achDesBlindShot=击打对手的球
 achPotOpponentBall=活雷锋
 achDesPotOpponentBall=在不犯规的前提下，打进对手的球
 achRemainOneMustLose=剩一必输
-achDesRemainOneMustLose=在对手仅剩下一颗球时，单杆连续打进4颗球以上致胜
+achDesRemainOneMustLose=在对手仅剩下一颗球时，玩家单杆连续打进4颗球以上赢得该局
 achChineseEightNoPot=...未来可期
 achDesChineseEightNoPot=一局中式台球比赛中击球5次以上，但最终一球未进
 achCebCumulativeClear=中八高手
