Sound effect update

--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
@@ -427,6 +427,7 @@ studioName=Trash software studio
 settingsGame=Game
 settingsGeneral=General
 settingsGraphics=Graphics
+settingsSound=Audio
 fastGameAimLineLength=Fast game aiming line length
 fastGameAiStrength=Fast game AI strength
 numAiThreads=AI threads
@@ -441,6 +442,7 @@ productionFrameRate=Recording frame rate
 antiAliasing=Anti aliasing
 antiAliasingDisabled=Disabled
 antiAliasingBalanced=Balanced
+effectSound=Effect volume
 performanceMode=Prediction Quality
 performanceNone=Disabled
 performanceVeryLow=Very Low
