--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -451,6 +451,7 @@ studioName=垃圾软件工作室
 settingsGame=游戏
 settingsGeneral=通用
 settingsGraphics=画面
+settingsSound=声音
 fastGameAimLineLength=快速游戏瞄准线长度
 fastGameAiStrength=快速游戏AI强度
 numAiThreads=AI线程数
@@ -465,6 +466,7 @@ productionFrameRate=录像帧率
 antiAliasing=抗锯齿
 antiAliasingDisabled=关
 antiAliasingBalanced=平衡
+effectSound=音效音量
 performanceMode=白球预测质量
 performanceNone=无
 performanceVeryLow=极低
