--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
@@ -474,6 +474,7 @@ clothGoodnessExcellent=Excellent
 clothGoodnessGood=Good
 clothGoodnessNormal=Normal
 clothGoodnessBad=Bad
+clothGoodnessWorse=Worse
 clothGoodnessTerrible=Terrible
 
 clothSmoothnessFast=Very Fast
