--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -557,6 +557,7 @@ clothGoodnessExcellent=极佳
 clothGoodnessGood=优质
 clothGoodnessNormal=一般
 clothGoodnessBad=劣质
+clothGoodnessWorse=极差
 clothGoodnessTerrible=垃圾
 
 clothSmoothnessFast=全新
