--- a/src/main/resources/trashsoftware/trashSnooker/doc/changelog.txt
+++ b/src/main/resources/trashsoftware/trashSnooker/doc/changelog.txt
@@ -53,6 +53,9 @@
     * 出杆计时器（仅显示）
 * 动画优化：
     * 优化了使用架杆时回杆距离过长的问题
+* 其他修改：
+    * 修改了绿台中袋的形状，降低了进球难度
+    * 修改了部分球杆的尾部直径
 
 ===== 0.5.1 =====
 20230921
