Fixed snooker possible break bug

--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
@@ -157,6 +157,7 @@ winsAFrame=%s wins a frame.
 winsAMatch=%s wins the match.
 scoreAhead=ahead
 scoreBehind=behind
+breakScore=Break %d
 possibleBreak=Possible %d
 
 notEndExitWarning=Frame has not end yet, confirm to quit?
