--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -161,6 +161,7 @@ winsAFrame=%s 赢得一局。
 winsAMatch=%s 胜利。
 scoreAhead=领先
 scoreBehind=落后
+breakScore=单杆得分 %d
 possibleBreak=Possible %d
 
 notEndExitWarning=游戏未结束，是否退出？
