--- a/src/main/resources/trashsoftware/trashSnooker/doc/changelog.txt
+++ b/src/main/resources/trashsoftware/trashSnooker/doc/changelog.txt
@@ -26,7 +26,10 @@
     * 立杆尾时加入身高因素
     * 立杆尾时架杆不再跟着一起立
     * 重新引入了球的碰撞能量损耗
+    * 优化了投掷效应
     * 贴库球优化
+* AI优化：
+    * AI球员对加塞的喜好程度
 * 完善了生涯模式的历史消费记录:
     * 从career中分离invoice并记录每一笔变化
 * 成就系统更新：
