--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
@@ -460,6 +460,7 @@ settingsGraphics=Graphics
 settingsSound=Audio
 fastGameAimLineLength=Fast game aiming line length
 fastGameAiStrength=Fast game AI strength
+autoChangeBreakCue=Auto change to break cues
 numAiThreads=AI threads
 resolution=Resolution
 systemZoom=System Zoom
