--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -460,6 +460,7 @@ settingsGraphics=画面
 settingsSound=声音
 fastGameAimLineLength=快速游戏瞄准线长度
 fastGameAiStrength=快速游戏AI强度
+autoChangeBreakCue=自动更换冲杆
 numAiThreads=AI线程数
 resolution=分辨率
 systemZoom=系统缩放
