--- a/src/main/resources/trashsoftware/trashSnooker/doc/changelog.txt
+++ b/src/main/resources/trashsoftware/trashSnooker/doc/changelog.txt
@@ -1,12 +1,19 @@
 ===== 0.6.1 =====
+20250214
 
-* 辅助瞄准工具：瞄准延长线
+* 修改了鼠标拖动瞄准的逻辑：改为直接跟随鼠标
+* 辅助瞄准工具更新
+    * 瞄准延长线
+    * 优化了下球观察工具
+    * 记忆功能
+* 斯诺克计分板更新：击打彩球时显示实际目标球
 * AI更新：
     * 斯诺克AI明显超分后将不再防守
     * 如果有满分杆，AI将不在最后一杆秀杆法
 * bug修复：
     * 某些球员一直用架杆击球
     * 金球167时目标更新错误
+* 略微调整了中八袋口大小
 
 ===== 0.6.0 =====
 20241017
