--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
@@ -606,6 +606,7 @@ pocketDiffLoose=Loose
 pocketDiffNormal=Regular
 pocketDiffTight=Tight
 pocketDiffVeryTight=Very Tight
+pocketDiffExtremeTight=Extremely Tight
 
 trainingSnakeFull=Routine-full
 trainingSnakeFullDense=Routine-dense
