--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -605,7 +605,8 @@ pocketDiffVeryLoose=极宽松
 pocketDiffLoose=宽松
 pocketDiffNormal=常规
 pocketDiffTight=紧
-pocketDiffVeryTight=极紧
+pocketDiffVeryTight=很紧
+pocketDiffExtremeTight=极紧
 
 trainingSnakeFull=全台蛇彩
 trainingSnakeFullDense=密集蛇彩
