--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
@@ -99,6 +99,8 @@ fastGameGame=Match
 training=Training
 trainingItem=Training Item
 trainingChallenge=Challenge
+letScoreOrBall=Give ball/score
+notLetScoreOrBall=None
 ruleTableBall=Rule/Table/Ball
 totalFrames=Total Frames
 nylonCloth=Nylon/Cloth
