--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -99,6 +99,8 @@ fastGameGame=比赛
 training=训练
 trainingItem=训练项目
 trainingChallenge=挑战模式
+letScoreOrBall=让球/让分
+notLetScoreOrBall=无
 ruleTableBall=规则/球桌/球
 totalFrames=总局数
 nylonCloth=台尼/桌布
