--- a/src/main/resources/trashsoftware/trashSnooker/doc/changelog.txt
+++ b/src/main/resources/trashsoftware/trashSnooker/doc/changelog.txt
@@ -1,8 +1,21 @@
+===== 0.7 =====
+
+* 重做了摩擦力运算引擎
+* AI更新：
+    * 加入了AI的击球角度，AI现也会遇到贴库、后斯诺等问题
+    * 加入了AI的容错度检查
+    * AI防守分值更新
+    * 修复了一些历史遗留性bug：
+        * AI不打紧贴的球
+        * AI不打袋角里面的球
+* 自定义让球/让分
+
 ===== 0.6.2 =====
 
 * 鼠标拖动逻辑改为在设置内选择
 * 增强了对config.cfg错误内容的容忍性
 * 生涯球员更名
+* 球员的左手/右手/架杆能力分开计算
 
 ===== 0.6.1 =====
 20250214
