Updated to 0.7 beta 1
===== 0.7 =====
--- Beta 1 ---
20250503

* 重做了摩擦力运算引擎
* AI更新：
    * 加入了AI的击球角度，AI现也会遇到贴库、后斯诺等问题
    * 加入了AI的容错度检查
    * AI防守分值更新
    * 修复了一些历史遗留性bug：
        * AI不打紧贴的球
        * AI不打袋角里面的球
* 自定义让球/让分
* 加入了自定义球的贴图，并修改了贴图投影方式

--- a/src/main/resources/trashsoftware/trashSnooker/doc/changelog.txt
+++ b/src/main/resources/trashsoftware/trashSnooker/doc/changelog.txt
@@ -1,4 +1,6 @@
 ===== 0.7 =====
+--- Beta 1 ---
+20250503
 
 * 重做了摩擦力运算引擎
 * AI更新：
@@ -9,6 +11,7 @@
         * AI不打紧贴的球
         * AI不打袋角里面的球
 * 自定义让球/让分
+* 加入了自定义球的贴图，并修改了贴图投影方式
 
 ===== 0.6.2 =====
 
