--- a/src/main/resources/trashsoftware/trashSnooker/doc/changelog.txt
+++ b/src/main/resources/trashsoftware/trashSnooker/doc/changelog.txt
@@ -1,14 +1,12 @@
 ===== 0.7 =====
---- Beta 3 ---
-
-* 加入了每一局每一杆的详细记录
-* 局内分析，如中盘、尾盘等
-
 --- Beta 2 ---
+20250520
 
 * 加入了抬高杆尾之后的发力限制
 * 修改了抬高杆尾与打点相关的一些东西
-* 球员的心态分为了抗压能力与抗rua能力
+* 加入了每一局每一杆的详细记录
+* 局内分析，如中盘、尾盘等
+* 球员的心态分为了抗压能力与实时更新的心理状态
 
 --- Beta 1 ---
 20250503
