--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
@@ -615,6 +615,10 @@ pocketDiffTight=Tight
 pocketDiffVeryTight=Very Tight
 pocketDiffExtremeTight=Extremely Tight
 
+extensionNo=
+extensionShort=Ext.
+extensionSocket=Socket
+
 trainingSnakeFull=Routine-full
 trainingSnakeFullDense=Routine-dense
 trainingSnakeHalf=Routine-half
