--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -615,6 +615,10 @@ pocketDiffTight=紧
 pocketDiffVeryTight=很紧
 pocketDiffExtremeTight=极紧
 
+extensionNo=
+extensionShort=加长把
+extensionSocket=套筒
+
 trainingSnakeFull=全台蛇彩
 trainingSnakeFullDense=密集蛇彩
 trainingSnakeHalf=半台蛇彩
