--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
@@ -55,6 +55,7 @@ initializingCareer=Initializing data...
 playerPersonAlreadyExists=Player already exists
 pleaseSelectAPlayer=Please select a person
 pleaseInputName=Please type your name
+initialLevel=Initial level
 
 difEasiest=Easiest
 difEasy=Easy
