--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -55,6 +55,7 @@ initializingCareer=正在初始化存档...
 playerPersonAlreadyExists=已存在该球员
 pleaseSelectAPlayer=请选择一名球员
 pleaseInputName=请输入玩家名
+initialLevel=初始等级
 
 difEasiest=最易
 difEasy=简单
