Added frame restart
八球和九球加入了开球违例后重开本局的选项

--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
@@ -140,6 +140,7 @@ closeWindowConcede=Closing before game finishes equivalents to conceding the fra
 replaceBallInHand=Place ball in hand
 letOpponentPlay=Let opponent play
 pushOut=Push out
+reBreak=Re-break
 playMenu=Display
 p1PlaySpeedMenu=P1 speed
 p2PlaySpeedMenu=P2 speed
@@ -161,6 +162,9 @@ displayWhiteTrace=Trace cue ball
 displayTargetTrace=Trace target
 displayAllTrace=Trace all balls
 clearAllTraces=Clear traces
+askWhoReBreakFmt=%s, please select who breaks
+selfReBreak=Me
+opponentReBreak=Opponent
 
 foul=Foul
 scoreDiff=%d difference
@@ -648,6 +652,7 @@ snookerStd=Standard
 snookerGolden=Golden 167
 
 frameKindNormal=Normal
+frameKindRestarted=Restarted
 frameKindBreakClear=Break and run
 frameKindContinueClear=Run
 frameKindSingleBreakWin=Single-visit win
