--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -140,6 +140,7 @@ closeWindowConcede=关闭游戏视作本局认输
 replaceBallInHand=重新放置手中球
 letOpponentPlay=让杆
 pushOut=推球
+reBreak=重新开球
 playMenu=显示
 p1PlaySpeedMenu=P1倍速
 p2PlaySpeedMenu=P2倍速
@@ -161,6 +162,9 @@ displayWhiteTrace=显示白球轨迹
 displayTargetTrace=显示目标球轨迹
 displayAllTrace=显示所有球轨迹
 clearAllTraces=清除
+askWhoReBreakFmt=%s，请选择由己方或对方开球
+selfReBreak=己方开球
+opponentReBreak=对方重开
 
 foul=犯规
 scoreDiff=分差 %d
@@ -648,6 +652,7 @@ snookerStd=标准
 snookerGolden=金球167
 
 frameKindNormal=普通
+frameKindRestarted=重开
 frameKindBreakClear=炸清
 frameKindContinueClear=接清
 frameKindSingleBreakWin=单杆制胜
